# ConquestOfParadise

./: .gitignore  AGENT.md  CMakeLists.txt  DESIGN.md  DEVLOG.md  NEXT_CYCLE.md  SETUP_GUIDE.md  TODO.md  civCode.js  index.html  main.cpp  package-lock.json  package.json  patch.js  patch_data.js  patch_end.js  rebuild.js  server.js  test.js
src/: App.jsx  data.js
tests/: test_main.cpp
